// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToCart component should render correctly with isSetToGroceryList=false 1`] = `
<DocumentFragment>
  <div
    class="css-j0hugt"
  >
    <button>
      Add to Grocery List
    </button>
  </div>
</DocumentFragment>
`;

exports[`AddToCart component should render correctly with isSetToGroceryList=true 1`] = `
<DocumentFragment>
  <div
    class="css-j0hugt"
  >
    <button>
      Add Another Grocery List
    </button>
    <p>
      it has now been added to your cart!
    </p>
  </div>
</DocumentFragment>
`;
